[package]
name = "axum-tws"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "A high-performance WebSocket backend for axum powered by tokio-websockets."
repository = "https://github.com/robertwayne/axum-tws"
categories = ["web-programming"]
keywords = ["axum", "tokio-websockets"]
readme = "README.md"
version = "0.4.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
axum-core = "0.4"
base64 = "0.22"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
http = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
sha1 = "0.10"
tokio = { version = "1", default-features = false, features = ["macros"]}
tokio-websockets = { version = "0.10", features = ["server", "ring"] }

[dev-dependencies]
axum = { version = "0.7.9", default-features = false, features = ["http1", "tokio"]}
http-body-util = "0.1.2"
hyper = { version = "1", features = ["client"] }
tokio-websockets = { version = "0.10", features = ["client", "server", "rand", "ring"] }
tower = "0.5.2"

[features]
default = ["http2"]
http2 = ["axum/http2", "hyper/http2"]
